correctedoverflow

--- a/task1/src/components/AdditionalSidebar.css
+++ b/task1/src/components/AdditionalSidebar.css
@@ -8,7 +8,7 @@
   font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
-  height: 94vh;
+  height: 95vh;
   width: 240px;
   font-size: 14px;
   line-height: 28px;
